[package]
name = "threshold_crypto_wasm_bridge"
version = "0.0.1"
authors = ["Ian Coleman"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

wasm-bindgen = "0.2.63"
threshold_crypto = { version = "0.4.0" }
bincode = "1.2.1"
serde = { version = "1.0.104", features = ["derive"] }
rand_core = "0.5.1"
multibase = "~0.6.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
