[package]
name = "threshold_crypto_wasm_bridge"
version = "0.0.1"
authors = ["Ian Coleman"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

wasm-bindgen = "0.2.63"
blsttc = "2.0.2"
serde = { version = "1.0.104", features = ["derive"] }
rand_core = "0.5.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[patch.crates-io]
blst = { git = "https://github.com/iancoleman/blst", branch = "single_thread" }
blsttc = { git = "https://github.com/iancoleman/blsttc", branch = "to_from_bytes" }
