[package]
name = "threshold_crypto_wasm_bridge"
version = "0.0.1"
authors = ["Ian Coleman"]
edition = "2021"
description = "web ui for blsttc"
repository = "https://github.com/iancoleman/blsttc_ui"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

wasm-bindgen = "0.2.80"
blsttc = "7.0.0"
getrandom = { version = "0.2", features = ["custom"] }
rand_core = "0.6.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
